--- a/Cart/header.css
+++ b/Cart/header.css
@@ -8,15 +8,87 @@
 } */
  
  /* Header or Navbar */
- header {
+
+.header-container{
   min-width: 1200px;
 
   width: 100%;
   position: sticky;  
   top: 0%;
   background-color: #151566;
-}
-.header-container{
+     
+  
+  .navbar {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    color: #fff;
+    max-width: 1280px;
+    margin: 0 auto;
+
+
+  
+    .navlogo img {
+      margin-top: 10px;
+      width: fit-content;
+    }
+
+
+    
+
+  }
+
+            
+ 
+  .nav-search {
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 620px;
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+
+
+    .search-icon {
+      max-width: 45px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      background: #febd68;
+      color: #000;
+      cursor: pointer;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+  }
+
+
+  .cart {
+    display: flex;
+  }
+   
+  .cart .cart-icon {
+    font-size: 2.5rem
+  }
+   
+  .cart p {
+    margin-top: 20px;
+    font-weight: 500;
+  }
+
+
+
+
+
+
+
+
+
+
 
   html {
     scroll-behavior: smooth;
@@ -33,21 +105,7 @@
    
  
    
-  .navbar {
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    color: #fff;
-    max-width: 1280px;
-    margin: 0 auto;
-  }
-   
-  .nav-logo img {
-    margin-top: 10px;
-    width: fit-content;
-  }
+
    
   .address .deliver {
     margin-left: 20px;
@@ -60,15 +118,7 @@
     align-items: center;
   }
    
-   
-  .nav-search {
-    display: flex;
-    justify-content: space-evenly;
-    max-width: 620px;
-    width: 100%;
-    height: 40px;
-    border-radius: 4px;
-  }
+  
    
   .select-search {
     background: #f3f3f3;
@@ -88,19 +138,7 @@
     padding-left: 10px;
   }
    
-  .search-icon {
-    max-width: 45px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    background: #febd68;
-    color: #000;
-    cursor: pointer;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
+  
    
   .sign-in p,
   .returns p {
@@ -113,18 +151,7 @@
     font-weight: 600;
   }
    
-  .cart {
-    display: flex;
-  }
-   
-  .cart .cart-icon {
-    font-size: 2.5rem
-  }
-   
-  .cart p {
-    margin-top: 20px;
-    font-weight: 500;
-  }
+  
    
   .banner {
     padding: 10px 20px;
@@ -179,6 +206,31 @@
    
   /* Hero Section */
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
