--- a/Cart/index.css
+++ b/Cart/index.css
@@ -4,153 +4,151 @@ body {
     min-width: 1100px;
 }
 
-.cart-item {
-
-    .total-box {
-        display: flex;
-        flex-direction: column;
-        /* margin: 0px 20px 0px 15px; */
-        height: 20%;
-        width: 20%;
-        background-color: #FFFFFF;
-        min-width: 100px;
-        align-items: center;
-        justify-items: center;
-        min-width: auto;
-        font-size: 20px;
-        padding-top: 2rem;
-    }
-
-    .product-box {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        width: 75%;
-        padding-right: 20px;
-        padding-left: 20px;
-        /* min-width: 1100px; */
-        padding-bottom: 30px;
-    }
-
-    .heading, .product-box {
-        background-color: #FFFFFF;
-        color: #0F1111;
-    }
-
-
-    .product-options {
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
-        padding-top: 20px;
-
-    }
-
-
-
-
-    p.titles:hover {
-        color: rgb(148, 142, 238);
-        cursor: pointer;
-    }
-
-    h1.titles {
-        font-family: "Amazon Ember", Arial, sans-serif;
-        font-weight: 200;
-    }
-
-    p, h1 {
-        font-family: "Amazon Ember", Arial, sans-serif;
-    }
-
-    .cart-item {
-        display: flex;
-        width: 100%;
-        min-width: 970px;
-    }
-
-
-    .heading {
-        min-width: 700px;
-        width: 70%;
-    }
-
-    .main-div {
+.cart-item{
+    margin-top: 1rem;
+    display: flex;
+    width: 100%;
+    min-width: 970px;
+    .main-div{
         margin-left: 20px;
-        margin-right: 20px;
-        min-width: fit-content;
+      margin-right: 20px;
+      min-width:fit-content;
         display: flex;
+
+ .product-box{
+    
+            background-color: #FFFFFF;
+            color:#0F1111;
+            display: flex;
+            flex-direction: column;
+            gap: 1px;
+            width:75%;
+            padding-right:20px;
+            padding-left: 20px;
+            min-width: 900px;
+            padding-bottom: 20px;
+
+            .heading{
+                min-width: 700px;
+                width: 70%;
+                background-color: #FFFFFF;
+                color:#0F1111;
+                margin-bottom: 1rem;
+                      }
+
+
+                      .product{
+                        /* flex: 2; */
+                        display: flex;
+                        flex-wrap: nowrap;
+                        border-top: 1px solid gray; 
+
+
+                        .product-image{
+                            margin-top: 0.5rem;
+                            padding-right: 12px;
+                            padding-left: 10px;
+                            display: flex;
+                            align-items: center; 
+                        }
+                        .product-image img {
+                            max-width: 100%;
+                            height: auto;
+                            margin: 0 auto; 
+                        }
+                        
+.product-info{
+    margin-top: 1.5rem;
+    font:"Amazon Ember";
+    border: 100px red;
+    width: 70%;
+    padding-right: 90px;
+   
+    .titles{
+     margin-bottom: 0px;
+     padding: 0px;
+    }
+    .stock , .eglibility{
+     margin: 0px;
+     padding: 0px;
     }
 
-    .buybutton {
-        background-color: yellow;
+    .stock{
+        color: red;
+    }
+    .eglibility{
+        color: #565959;
+    }
+
+
+    
+ .product-options{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding-top: 20px;
+    
+     }
+
+    
+
+}
+
+.product-price{
+    margin-top: 1rem;
+    padding-top: 10px;
+    padding-right: 10px;    
+    text-align:end;
+    width: 20%;
+ }
+                        
+}
+
+        }
+
+        
+
+.total-box{
+    display: flex;
+    flex-direction: column;
+    margin: 50px 20px 0px 15px;
+    height: 20%;
+    width: 20%;
+    background-color: #FFFFFF;
+    min-width: 100px;
+    align-items: center;
+    justify-items: center;
+    min-width: auto;
+    font-size: 20px;
+
+    .buybutton{
+        margin-top: 1rem;
+        background-color: orange;
         border-radius: 10px;
         font-size: 16px;
-        padding: 5px;
-        color: black;
-        border: 2px solid black;
-        margin-top: 5%;
-    }
+        padding: 8px;
+      }
+      
+ }
 
-    .product {
-        /* flex: 2; */
-        display: flex;
-        flex-wrap: nowrap;
-        border-top: 1px solid gray;
-    }
-
-    .product-image {
-        padding-right: 12px;
-        padding-left: 10px;
-        display: flex;
-        align-items: center;
+        
     }
 
 
-    /* Hard Coded values */
-    .product-image img {
-        width: 300px;
-        height: 250px;
-    }
-    /* Hard Coded values */
+ p.titles:hover {
+    color: rgb(148, 142, 238);
+    cursor: pointer;
+  }
+ h1.titles{
+    font-family :"Amazon Ember",Arial,sans-serif;
+    font-weight: 200;
+}
 
+p,h1{
+    font-family :"Amazon Ember",Arial,sans-serif;
+}
 
-    .product-info {
-        font: "Amazon Ember";
-        border: 100px red;
-        width: 70%;
-        padding-right: 90px;
-
-        .titles {
-            margin-bottom: 0px;
-            padding: 0px;
-        }
-
-        .stock, .eglibility {
-            margin: 0px;
-            padding: 0px;
-        }
-
-        .stock {
-            color: red;
-        }
-
-        .eglibility {
-            color: #565959;
-        }
-
-
-    }
-
-    .product-price {
-        padding-top: 10px;
-        padding-right: 10px;
-        text-align: end;
-        width: 20%;
-    }
-
-
-    body {
+    body{
         background-color: #EAEDED;
     }
 }
